--- a/package.json
+++ b/package.json
@@ -17,7 +17,9 @@
     "react-native": "0.67.2",
     "react-native-image-slider-box": "^1.1.22",
     "react-native-safe-area-context": "^4.3.1",
-    "react-native-screens": "^3.15.0"
+    "react-native-screens": "^3.15.0",
+    "react-native-star-rating": "^1.1.0",
+    "react-native-vector-icons": "^9.2.0"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9",
