--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@react-navigation/native": "^6.0.11",
     "@react-navigation/native-stack": "^6.7.0",
     "axios": "^0.26.0",
+    "dateformat": "^5.0.3",
     "react": "17.0.2",
     "react-native": "0.67.2",
     "react-native-image-slider-box": "^1.1.22",
